<resources>
    <string name="app_name">Control de Gastos</string>
    <string name="show_dialog">oculto</string>
    <string name="login">Login</string>
    <string name="login_title">Iniciar Sesión</string>
    <string name="registrar">Registrar</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login_label">Login</string>

    <string name="reg_title">Registrar</string>
    <string name="reg_login">Ingrese Nombre Usuario</string>
    <string name="reg_pass">Ingrese Contraseña</string>
    <string name="reg_pass_2">Ingrese Contraseña Nuevamente</string>
    <string name="reg_register">Registrar</string>
    <string name="reg_cancel">Volver</string>

    <string name="correct_login">Inicio de sesión correcto</string>
    <string name="fail_login">Inicio de sesión fallido</string>
    <string name="no_user">Se requiere nombre de usuario</string>
    <string name="no_pass">Se requiere contraseña</string>
    <string name="wrong_pass">Contraseña incorrecto</string>
    <string name="wrong_user">Usuario no existe</string>

    <string name="reg_pass_fail">Contraseñas no son iguales</string>
    <string name="reg_no_user">Se requiere nombre de usuario</string>
    <string name="reg_no_pass">Se requiere contraseña</string>
    <string name="reg_user_exists">Usuario ya existe</string>
    <string name="reg_pass_not_equal">Las contraseña son diferentes</string>
    <string name="db_error">Error de Base de Datos</string>
    <string name="db_insert">Datos Ingresados Correctamente</string>

    <string name="img_block">Botton actualmente bloqueado</string>
    <string name="ingreso_monto">Ingrese Monto</string>
    <string name="ingreso_ingresar">Ingresar</string>
    <string name="ingreso_cancel">Cancelar</string>
    <string name="ingreso_et_monto">Valor no ingresado</string>

    <string name="monto_db_insert">Monto Ingresados Correctamente</string>

    <string name="et_sueldo">Sueldo</string>
    <string name="et_ingresoExtra">Ingreso Extra</string>
    <string name="et_transporte">Transporte</string>
    <string name="et_alimentos">Alimentos</string>
    <string name="et_accesorios">Accesorios</string>
    <string name="et_otros">Otros</string>
    <string name="et_grafica">Graficas</string>


    <string-array name="DropMonth">
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
        <item>Abril</item>
        <item>Mayo</item>
        <item>Junio</item>
        <item>Julio</item>
        <item>Agosto</item>
        <item>Septiembre</item>
        <item>Octubre</item>
        <item>Noviembre</item>
        <item>Diciembre</item>
    </string-array>

    <string-array name="DropYear">
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
    </string-array>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="configure">Configure</string>


</resources>
