<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:padding="5dp">

<TextView
    android:id="@+id/textView1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="5dp"
    android:text="@string/reg_title"
    android:textSize="25sp"
    android:textStyle="bold" />

<EditText
    android:id="@+id/etRegLogin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:ems="10"
    android:hint="@string/reg_login"
    android:inputType="textEmailAddress"
    android:textAlignment="center" />

<EditText
    android:id="@+id/etRegPass"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:ems="10"
    android:hint="@string/reg_pass"
    android:inputType="textPassword"
    android:textAlignment="center" />

<EditText
    android:id="@+id/etRegPass2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:ems="10"
    android:hint="@string/reg_pass_2"
    android:inputType="textPassword"
    android:textAlignment="center" />

    <Button
        android:id="@+id/btnReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:text="@string/reg_register"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:text="@string/reg_cancel"
        android:textColor="@android:color/white" />
</LinearLayout>