<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <ImageView
        android:id="@+id/Img_Ingreso_Monto"
        android:layout_width="match_parent"
        android:layout_height="143dp"
        app:srcCompat="@drawable/btn_sueldo_bloqueado" />

    <EditText
        android:id="@+id/etIngresoMonto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:hint="@string/ingreso_monto"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:singleLine="false"
        android:textAlignment="center"
        android:maxLength="9" />

    <Button
        android:id="@+id/btnIngresoIngresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:text="@string/ingreso_ingresar"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btnIngresoCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:text="@string/ingreso_cancel"
        android:textColor="@android:color/white" />

</LinearLayout>
